# Fire

./: .gitignore  CMakeLists.txt  README.md
Fire/: CMakeLists.txt
Fire/include/Fire/: Fire.hpp
Fire/include/Fire/camera/: camera.hpp  film.hpp  orthographic_camera.hpp  perspective_camera.hpp  pixel_sensor.hpp  projective_camera.hpp  ray.hpp
Fire/include/Fire/core/: concepts.hpp  logger.hpp  macros.hpp
Fire/include/Fire/core/math/: basics.hpp  types.hpp  vector.hpp
Fire/include/Fire/core/memory/: debug_memory_allocator.hpp  fast_memory_allocator.hpp  memory_allocator.hpp
Fire/include/Fire/core/thread/: lock_free_queue.hpp  parallel_for.hpp  task.hpp  thread_pool.hpp
Fire/include/Fire/integrator/: integrator.hpp
Fire/include/Fire/math/: types.hpp
Fire/include/Fire/sampler/: basics.hpp
Fire/include/Fire/spectrum/: basics.hpp
Fire/src/camera/: orthographic_camera.cpp  perspective_camera.cpp  pixel_sensor.cpp  projective_camera.cpp
Fire/src/core/: logger.cpp
Fire/src/core/memory/: debug_memory_allocator.cpp  fast_memory_allocator.cpp  memory_allocator.cpp
Fire/src/core/thread/: task.cpp  thread_pool.cpp
Fire/src/spectrum/autogen/: readme.txt
Fire/src/spectrum/color/: cie_matching_curves.cpp  colorspace.cpp  illuminants.cpp  lms.cpp  rgb.cpp  xyz.cpp
Fire/src/spectrum/distributions/: densely_sampled_spectrum_distribution.cpp  piecewise_linear_spectrum_distribution.cpp  rgb_sigmoid_polynomial_spectrum_distribution.cpp  rgb_spectrum_distributions.cpp
Fire/src/spectrum/sample/: spectrum_sample.cpp  wavelengths_sample.cpp
FireCmd/fire/: main.cpp  (+1 more)
(+68 files in other folders)
